# Raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpplint_check_raytracer.sh
docs/: CMakeLists.txt  UMLRaytracer.py  raytracer_uml.puml  shaders.md
docs/clang-format/: show_diff.sh
scenes/: obj_demo.cfg  (+34 more)
src/: CMakeLists.txt  HitInfo.hpp  WindowSize.hpp  defs.hpp  main.cpp
src/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/EventsManager/: CMakeLists.txt  IEventsManager.hpp  SFMLEventsManager.cpp  SFMLEventsManager.hpp
src/EventsManager/InputManager/: InputManager.cpp  InputManager.hpp
src/Exception/: BaseException.hpp  CMakeLists.txt  ConfigParseException.hpp  FileIOException.hpp  IException.hpp  InvalidOperationException.hpp  PrimitiveNotFoundException.hpp  SceneImportException.hpp  ValueRangeException.hpp
src/IObserver/: CMakeLists.txt  IObserver.hpp
src/IObserver/SceneFileWatcher/: CMakeLists.txt  SceneFileWatcher.cpp  SceneFileWatcher.hpp  SceneReloader.cpp  SceneReloader.hpp
src/Light/: CMakeLists.txt  ILight.hpp
src/Light/ALight/: ALight.cpp  ALight.hpp  CMakeLists.txt
src/Light/AmbientLight/: AmbientLight.cpp  AmbientLight.hpp  CMakeLists.txt
src/Light/DirectionalLight/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp
src/Light/LightDecorator/: CMakeLists.txt  ColorLightDecorator.cpp  ColorLightDecorator.hpp  LightDecorator.cpp  LightDecorator.hpp
src/Light/LightFactory/: CMakeLists.txt  LightFactory.cpp  LightFactory.hpp
src/Light/PointLight/: CMakeLists.txt  PointLight.cpp  PointLight.hpp
src/Material/: CMakeLists.txt  Material.cpp  Material.hpp
src/Material/MaterialDecorator/: CMakeLists.txt  MaterialDecorator.cpp  MaterialDecorator.hpp
src/Math/: CMakeLists.txt
src/Math/Matrix3x3/: CMakeLists.txt  Matrix3x3.cpp  Matrix3x3.hpp
src/Math/Point3D/: CMakeLists.txt  Point3D.cpp  Point3D.hpp
src/Math/Vector2D/: Vector2D.hpp
src/Math/Vector3D/: CMakeLists.txt  Vector3D.cpp  Vector3D.hpp
src/PostProcess/: CMakeLists.txt  IPostProcess.hpp  PostProcessFactory.cpp  PostProcessFactory.hpp
src/PostProcess/BlurPostProcess/: BlurPostProcess.cpp  BlurPostProcess.hpp  BlurPostProcessPlugin.cpp  CMakeLists.txt
src/PostProcess/ChromaticAberrationPostProcess/: CMakeLists.txt  ChromaticAberrationPostProcess.cpp  ChromaticAberrationPostProcess.hpp  ChromaticAberrationPostProcessPlugin.cpp
src/PostProcess/GrayscalePostProcess/: CMakeLists.txt  GrayscalePostProcess.cpp  GrayscalePostProcess.hpp  GrayscalePostProcessPlugin.cpp
src/PostProcess/NegativePostProcess/: CMakeLists.txt  NegativePostProcess.cpp  NegativePostProcess.hpp  NegativePostProcessPlugin.cpp
src/PostProcess/Plugin/: CMakeLists.txt  IPostProcessPlugin.hpp  PostProcessPluginLoader.cpp  PostProcessPluginLoader.hpp  PostProcessPluginManager.cpp  PostProcessPluginManager.hpp
src/PostProcess/SupersamplingPostProcess/: CMakeLists.txt  SupersamplingPostProcess.cpp  SupersamplingPostProcess.hpp  SupersamplingPostProcessPlugin.cpp  SupersamplingPostProcessPlugin.hpp
src/Primitive/: CMakeLists.txt  IPrimitive.hpp  ObjModelLoader.cpp  ObjModelLoader.hpp
src/Primitive/APrimitive/: APrimitive.cpp  APrimitive.hpp  CMakeLists.txt
src/Primitive/Box/: Box.cpp  Box.hpp  BoxPlugin.cpp  CMakeLists.txt
src/Primitive/CompositePrimitive/: CMakeLists.txt  CompositePrimitive.cpp  CompositePrimitive.hpp
src/Primitive/Cone/: CMakeLists.txt  Cone.cpp  Cone.hpp  ConePlugin.cpp
src/Primitive/Cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp  CylinderPlugin.cpp
src/Primitive/Fractal/: CMakeLists.txt  Fractal.cpp  Fractal.hpp  FractalPlugin.cpp
src/Primitive/InfiniteCone/: CMakeLists.txt  InfiniteCone.cpp  InfiniteCone.hpp  InfiniteConePlugin.cpp
src/Primitive/InfiniteCylinder/: CMakeLists.txt  InfiniteCylinder.cpp  InfiniteCylinder.hpp  InfiniteCylinderPlugin.cpp
src/Primitive/KleinBottle/: CMakeLists.txt  KleinBottle.cpp  KleinBottle.hpp  KleinBottlePlugin.cpp
src/Primitive/MobiusStrip/: CMakeLists.txt  MobiusStrip.cpp  MobiusStrip.hpp  MobiusStripPlugin.cpp
src/Primitive/Plane/: CMakeLists.txt  Plane.cpp  Plane.hpp  PlanePlugin.cpp
src/Primitive/Plugin/: CMakeLists.txt  IPrimitivePlugin.hpp  PluginLoader.cpp  PluginLoader.hpp  PrimitivePluginManager.cpp  PrimitivePluginManager.hpp
src/Primitive/PrimitiveDecorator/: CMakeLists.txt  PrimitiveDecorator.cpp  PrimitiveDecorator.hpp
src/Primitive/PrimitiveFactory/: CMakeLists.txt  PrimitiveFactory.cpp  PrimitiveFactory.hpp
src/Primitive/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp  SpherePlugin.cpp
src/Primitive/TangleCube/: CMakeLists.txt  TangleCube.cpp  TangleCube.hpp  TangleCubePlugin.cpp
src/Primitive/Torus/: CMakeLists.txt  Torus.cpp  Torus.hpp  TorusPlugin.cpp
src/Primitive/Triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  TrianglePlugin.cpp
src/Ray/: CMakeLists.txt  Ray.cpp  Ray.hpp
src/Rectangle3D/: CMakeLists.txt  Rectangle3D.cpp  Rectangle3D.hpp
src/Renderer/: CMakeLists.txt  IRenderer.hpp  Renderer.cpp  Renderer.hpp
src/Renderer/DisplayManager/: CMakeLists.txt  IDisplayManager.hpp  SFMLDisplayManager.cpp  SFMLDisplayManager.hpp
src/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp
src/Shader/: AShader.cpp  AShader.hpp  BasicShader.cpp  BasicShader.hpp  CMakeLists.txt  FresnelShader.hpp  IShader.hpp  PhongShader.cpp  PhongShader.hpp  ShaderFactory.cpp  ShaderFactory.hpp  ToonShader.hpp
src/Texture/: ATexture.cpp  ATexture.hpp  CMakeLists.txt  ITexture.hpp
src/Transformation/: CMakeLists.txt  ITransformation.hpp
tests/: CMakeLists.txt  test_aprimitive.cpp  test_box.cpp  test_cone.cpp  test_cylinder.cpp  test_displacementmap.cpp  test_exceptions.cpp  test_imagetexture.cpp  test_infinitecone.cpp  test_infinitecylinder.cpp  test_kleinbottle.cpp  test_main.cpp  test_material.cpp  test_matrix3x3.cpp  test_mobiusstrip.cpp  test_mobiusstriputils.cpp  test_normalmap.cpp  test_perlinnoisetexture.cpp  test_plane.cpp  test_point3d.cpp  test_specularmap.cpp  test_sphere.cpp  test_stubs.cpp.in  test_tanglecube.cpp  test_temp.cpp  test_torus.cpp  test_vector2d.cpp  test_vector3d.cpp
(+91 files in other folders)
